--- a/blogs/Thailand.html
+++ b/blogs/Thailand.html
@@ -346,8 +346,14 @@
                     Купить туры в Таиланд можно на многих сайтах и самостоятельно поездку
                     организовать несложно. Достаточно просто купить билеты и забронировать отель.
                     Или найти его на месте и поселиться. В этом деле туристы помогут брошюры,
-                    которые бесплатно выдаются в центрах туристической информации.
+                    которые бесплатно выдаются в центрах туристической информации. <br><br>
+                    
+                    Если планируете поездку в Таиланд, рекомендуем ознакомиться с нашей статьей: <br><br>
                 </p>
+                
+                <a href="./Phuket" class="text-link-h2">
+                    Пляжный отдых на Пхукете
+                </a>
             </div>
         </div>
         <section class="center">
