--- a/blogs/Thailand.html
+++ b/blogs/Thailand.html
@@ -136,7 +136,9 @@
                     <span>•</span>
                     <li class="section-1-li">Боря Ф</li>
                 </ul>
-                <div class="section-1-cont-3-col">
+                
+                <!-- THREE IMAGES COL -->
+                <!-- <div class="section-1-cont-3-col">
                     <div class="section-1-img-small-wrapper">
                         <img src="../assets/articles/thailand/img1.jpg" alt="" class="section-1-img-small">
                     </div>
@@ -146,7 +148,10 @@
                     <div class="section-1-img-small-wrapper">
                         <img src="../assets/articles/thailand/img4.jpg" alt="" class="section-1-img-small">
                     </div>
-                </div>
+                </div> -->
+                <div class="section-1-img-wrapper">
+                    <img src="../assets/articles/thailand/img9.jpg" alt="Таиланд тур" class="section-1-img">
+                   </div>
                
                <p class="section-1-p">Таиланд – одно из самых приятных направлений для путешествий, как в теплый
                 сезон, так и зимой. Страна безвизовая, относительно безопасная, фотогеничная и
