--- a/blogs/Phuket.html
+++ b/blogs/Phuket.html
@@ -348,7 +348,7 @@
                 </a>
             </div>
         </section>
-        <section class="center">
+        <!-- <section class="center">
             <div class="inner">
                 <div class="comment-container">
                     <div class="comment-container-upper">
@@ -393,7 +393,7 @@
                    </div>
                </form>
             </div>
-        </section>
+        </section> -->
         
         <footer class="center footer">
             <div class="inner footer-inner">
