--- a/blogs/Bangkok.html
+++ b/blogs/Bangkok.html
@@ -154,14 +154,9 @@
                     <img src="../assets/articles/bangkok/img1.jpg" alt="Поездка в Бангкок   " class="section-1-img">
                    </div>
                
-               <p class="section-1-p justify-wrapper">Бангкок – один из крупнейших мегаполисов Юго-Восточной Азии. Городя явдяется
-                столицей Таиланда и полезным транспортный хабо. Столицу страны удобно посещать и
-                во время тура по Таиланду и в рамках самостоятельного длительного путешествия по
-                Азии. Большинство туристов, кто пребывает по путевке в Таиланд, проводят в столице
-                немного времени, после чего и отправляются к морю и пляжам на такие популярные
-                острова как на Пхукет, Самуи и в другие места. Однако, если задержаться в Бангкоке, то
-                можно найти для себя много интересного и больше узнать о истории и культуре
-                королевства.
+               <p class="section-1-p justify-wrapper">
+                Бангкок – один из крупнейших мегаполисов Юго-Восточной Азии. Городя является столицей Таиланда и полезным транспортный хабом. Столицу страны удобно посещать и во время тура по Таиланду и в рамках самостоятельного длительного путешествия по Азии. Большинство туристов, кто пребывает по путевке в Таиланд, проводят в столице немного времени, после чего и отправляются к морю и пляжам на такие популярные острова как на Пхукет, Самуи и в другие места. Однако, если задержаться в Бангкоке, то можно найти для себя много интересного и больше узнать о истории и культуре королевства.
+
                 </p>
                 
                 <h2 class="section-1-h2">Как добраться до столицы Таиланда?</h2>
