added privacy policy

--- a/blogs/Phuket.html
+++ b/blogs/Phuket.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Основные достопримечательности Пхукета. Фото, погода, отели, кухня.
     Недорогие туры на Пхукет от сервиса Y-Flights.com">
+    <meta name="google-signin-client_id" content="974741283536-sqvt8f5fl7jmnp9b0pffr5b372gh9fv8.apps.googleusercontent.com">
     <link rel="stylesheet" href="./style/phuket/phuket.css">
     <link
     href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
@@ -368,6 +369,7 @@
                     console.log("ID Token: " + id_token);
                 }
                 </script>
+                
                 <div class="comment-container">
                     <div class="comment-container-upper">
                         <p class="comment-name">Andrew Pinon</p>
