added privacy policy

--- a/blogs.html
+++ b/blogs.html
@@ -119,7 +119,7 @@
                 </ul>
             </div>
         </nav>
-        <h1 class="header-h1">Блог Y-Flights – это статьи о туризме во все уголки мира</h1>
+        <h1 class="header-h1">Блог о путешествиях</h1>
         <!-- <p class="header-p">Y-Flights это поиск самых выгодных билетов на самолет и бронирование отелей </p> -->
     </header>
 <!-- ================END OF HEADER =============================================================================================================================================================================-->
