--- a/blogs/Bangkok.html
+++ b/blogs/Bangkok.html
@@ -123,7 +123,7 @@
                     </ul>
                 </div>
             </nav>
-            <h1 class="header-h1">Поездка в столицу Таиланда – Бангкок</h1>
+            <h1 class="header-h1">Столица Таиланда Бангкок</h1>
         </header>
         
         <div class="center section-1" >
