--- a/blogs/Phuket.html
+++ b/blogs/Phuket.html
@@ -121,7 +121,7 @@
                     </ul>
                 </div>
             </nav>
-            <h1 class="header-h1">Отдых на острове Пхукет о А до Я</h1>
+            <h1 class="header-h1">Таиланд Пхукет</h1>
             <!-- <p class="header-p">Y-Flights это поиск самых выгодных билетов на самолет и бронирование отелей </p> -->
         </header>
         
