--- a/blogs/Thailand.html
+++ b/blogs/Thailand.html
@@ -121,7 +121,7 @@
                     </ul>
                 </div>
             </nav>
-            <h1 class="header-h1">Краткий обзор вариантов отдыха в Таиланде</h1>
+            <h1 class="header-h1">Тайланд отдых</h1>
             <!-- <p class="header-p">Y-Flights это поиск самых выгодных билетов на самолет и бронирование отелей </p> -->
         </header>
         
