--- a/blogs/flightticket.html
+++ b/blogs/flightticket.html
@@ -113,7 +113,7 @@
                 </ul>
             </div>
         </nav>
-        <h1 class="header-1-h1">Почему мы предлагаем покупать авиабилеты, бронировать отели и туры на Y-Flights?</h1>
+        <h1 class="header-1-h1">Поиск дешевых авиабилетов, бронирование отелей</h1>
        
         <p class="header-p">Y-Flights это поиск самых выгодных билетов на самолет и бронирование отелей </p>
     </header>
