--- a/index.html
+++ b/index.html
@@ -129,11 +129,10 @@
   
       <section class="section-1">
         <h1 class="banner-h1">
-          Выберите маршрут и мы произведем поиск дешевых авиабилетов
+          Поиск дешевых авиабилетов и отелей
         </h1>
         <h2 class="banner-h2">
-          Y-Flights это поиск самых выгодных билетов на самолет и бронирование
-          отелей
+          Выберите город вылета и прилета, укажите дату и мы подберем вам выгодный вариант
         </h2>
  
         <a style="opacity: 0;" onclick="ym(65631823, 'reachGoal', 'tours'); return true;" class="tourBtn" target="_blank" href="/tours">
