--- a/tours.html
+++ b/tours.html
@@ -133,7 +133,7 @@
           
 <!--------------- SECTION-1 ------------------------------------------------------------------------------------------------------------------------------------------------->
           <section class="section-1">
-            <h1 class="section-1-h1">Выберите страну для поиска тура вашей мечты</h1>
+            <h1 class="section-1-h1">Поиск туров онлайн</h1>
             <h2 class="section-1-h2">Мы произведем поиск выгодных вариантов, а вам останется выбрать самый подходящий.</h2>
             <!-- <script src="https://c18.travelpayouts.com/content?promo_id=1492&shmarker=290725&countries=0&resorts=&https%3A%2F%2Ftp.media%2Fr%3Fmarker=290725&p=771&u=https%3A%2F%2Ftravelata.ru&powered_by=true" charset="utf-8" async></script> -->
             <script src="//c26.travelpayouts.com/content?promo_id=1150&shmarker=290725&to_city=&to_hotel=&start_date=&nights=2&adults=2&from_city=Moscow&flex_dates=true&flex_nights=false&stars_from=1&stars_to=5&powered_by=true" charset="utf-8" async></script>
