--- a/blogs/Phuket.html
+++ b/blogs/Phuket.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Основные достопримечательности Пхукета. Фото, погода, отели, кухня.
     Недорогие туры на Пхукет от сервиса Y-Flights.com">
