added bali blog

--- a/blogs/Phuket.html
+++ b/blogs/Phuket.html
@@ -350,10 +350,13 @@
                 </a>
             </div>
         </section>
+        
+        <!-- COMMENT SECTION -->
 
         <section class="comment-section center">
             <div class="comment-section-inner inner">
                 <h4 class="comment-section-h4">Comments</h4>
+                <!-- <h1 style="position: absolute; left: 50%; top: 50%; transform: translate(-50%,-50%);">No Comments Yet</h1> -->
                 <!-- <div class="comment-container">
                     <div class="comment-container-upper">
                         <p class="comment-name">Andrew Pinon</p>
