--- a/blogs.html
+++ b/blogs.html
@@ -293,6 +293,12 @@
                             <img src="./assets/social media icons/telegram.svg" alt="telegram" class="social-media-icon">
                         </a>
                     </li>
+                    
+                    <li class="social-media-li">
+                        <a target="_blank" href="https://facebook.com/y.flights" class="social-media-a">
+                            <img src="./assets/social media icons/facebook.svg" alt="facebook" class="social-media-icon">
+                        </a>
+                    </li>
                 </ul>
               </div>
               <a href="./sitemap" class="link-h5">Карта сайта</a>
