--- a/blogs/Bali.html
+++ b/blogs/Bali.html
@@ -600,6 +600,12 @@
                 Поиск авиабилетов, отелей и туров – почему мы
               </a>
             </li>
+            
+            <li class="social-media-li">
+              <a target="_blank" href="https://facebook.com/y.flights" class="social-media-a">
+                  <img src="./assets/social media icons/facebook.svg" alt="facebook" class="social-media-icon">
+              </a>
+          </li>
           </ul>
         </div>
 
