--- a/blogs.html
+++ b/blogs.html
@@ -128,6 +128,31 @@
 <!-- ================MAIN SECTION - 1 ================================================================================================================================================================ -->
     <section class="center section-1">
         <div class="inner col-2">
+            
+                  <!-- BALI BLOG PREVIEW -->
+                  <a href="./blogs/Bangkok" class="spacer-vertical-1rem">
+                    <div class="blog-preview-container">
+                        <div class="blog-title-container">
+                            <h2 class="h2">Отдых Бали</h2>
+                        </div>
+                            <ul class="section-1-ul">
+                                <li class="section-1-li">August 15, 2020</li>
+                                <span>•</span>
+                                <li class="section-1-li">Автор</li>
+                                <span>•</span>
+                                <li class="section-1-li">Боря Ф</li>
+                            </ul>
+                            <div class="img-wrapper-large">
+                                <img src="./assets/Blog-page/blog display/bali-blog.jpg" alt="Бангкок" class="img img-large">
+                            </div>
+                            <div class="justify-wrapper">
+                                <p class="p">
+                                    Отдых в Индонезии можно организовать и по путевке и
+                                    самостоятельно. Он начинается с авиаперелета на Бали.
+                            </div> 
+                    </div>
+                </a>
+                 <!-- END OF BALIL BLOG PREVIEW -->
            
                 <!-- BANGKOK BLOG PREVIEW -->
                 <a href="./blogs/Bangkok" class="spacer-vertical-1rem">
