--- a/blogs.html
+++ b/blogs.html
@@ -130,7 +130,7 @@
         <div class="inner col-2">
             
                   <!-- BALI BLOG PREVIEW -->
-                  <a href="./blogs/Bangkok" class="spacer-vertical-1rem">
+                  <a href="./blogs/Bali" class="spacer-vertical-1rem">
                     <div class="blog-preview-container">
                         <div class="blog-title-container">
                             <h2 class="h2">Отдых Бали</h2>
