--- a/sitemap.html
+++ b/sitemap.html
@@ -124,7 +124,7 @@
                 </li>
                 <li class="section-1-li">
                     <a href="./blogs/Bali" class="link-text">
-                        Справка об Индонезии
+                        Отдых на Бали
                     </a>
                     
                 </li>
