--- a/blogs/Bali.html
+++ b/blogs/Bali.html
@@ -128,7 +128,7 @@
           </ul>
         </div>
       </nav>
-      <h1 class="header-h1">Отдых Бали</h1>
+      <h1 class="header-h1">Отдых на Бали</h1>
     </header>
 
     <section class="center section-1">
