--- a/blogs/Thailand.html
+++ b/blogs/Thailand.html
@@ -492,7 +492,7 @@
                         
                         <li class="social-media-li">
                             <a target="_blank" href="https://facebook.com/y.flights" class="social-media-a">
-                                <img src="./assets/social media icons/facebook.svg" alt="facebook" class="social-media-icon">
+                                <img src="../assets/social media icons/facebook.svg" alt="facebook" class="social-media-icon">
                             </a>
                         </li>
                     </ul>
