--- a/blogs/Bali.html
+++ b/blogs/Bali.html
@@ -133,7 +133,7 @@
 
     <section class="center section-1">
       <div class="inner">
-        <h2 class="section-1-h2">Отдых в Индонезии</h2>
+        <h2 class="section-1-h2">Справка об Индонезии</h2>
         <ul class="section-1-ul">
           <li class="section-1-li">August 15, 2020</li>
           <span>•</span>
@@ -603,7 +603,7 @@
             
             <li class="social-media-li">
               <a target="_blank" href="https://facebook.com/y.flights" class="social-media-a">
-                  <img src="./assets/social media icons/facebook.svg" alt="facebook" class="social-media-icon">
+                  <img src="../assets/social media icons/facebook.svg" alt="facebook" class="social-media-icon">
               </a>
           </li>
           </ul>
