added comment stytem for all blogs

--- a/blogs/Phuket.html
+++ b/blogs/Phuket.html
@@ -351,7 +351,7 @@
             </div>
         </section>
         
-        <!-- COMMENT SECTION -->
+<!-- COMMENT SECTION =======================================================================================================================================-->
 
         <section class="comment-section center">
             <div class="comment-section-inner inner">
@@ -417,6 +417,7 @@
                </form>
             </div>
         </section>
+<!-- END OF COMMENTS SECTION - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->
 
 <!-- ---------------------------FOOTER ---------------------------------------------- -->
         <footer class="center footer ">
@@ -493,7 +494,7 @@
             </div>
         </footer>
        
-   <script src="../scripts/blogs/Phuket.js"></script>
+   <script defer src="../scripts/blogs/Phuket.js"></script>
 
     <script>
         const burgerBtn = document.querySelector(".burger-menu");
