--- a/tours.html
+++ b/tours.html
@@ -260,7 +260,7 @@
               <div class="section-6-text-container">
                 <h3 class="section-6-h3">Остров Пхукет</h3>
                 <a href="./blogs/Phuket" class="section-6-a">Читать далее</a>
-                <a href="" class="section-6-a">- Блог</a>
+                <!-- <a href="" class="section-6-a">- Блог</a> -->
               </div>
             </div>
              <!--END OF BLOG -->
@@ -276,7 +276,7 @@
               <div class="section-6-text-container">
                 <h3 class="section-6-h3">Отдых в Тайланде</h3>
                 <a href="./blogs/Thailand" class="section-6-a">Читать далее</a>
-                <a href="" class="section-6-a">- Блог</a>
+                <!-- <a href="" class="section-6-a">- Блог</a> -->
               </div>
             </div>
              <!--END OF BLOG -->
@@ -292,7 +292,7 @@
               <div class="section-6-text-container">
                 <h3 class="section-6-h3">Таиланд Бангкок</h3>
                 <a href="./blogs//Bangkok" class="section-6-a">Читать далее</a>
-                <a href="" class="section-6-a">- Блог</a>
+                <!-- <a href="" class="section-6-a">- Блог</a> -->
               </div>
             </div>
              <!--END OF BLOG-->
