--- a/blogs.html
+++ b/blogs.html
@@ -133,7 +133,7 @@
                   <a href="./blogs/Bali" class="spacer-vertical-1rem">
                     <div class="blog-preview-container">
                         <div class="blog-title-container">
-                            <h2 class="h2">Отдых Бали</h2>
+                            <h2 class="h2">Отдых на Бали</h2>
                         </div>
                             <ul class="section-1-ul">
                                 <li class="section-1-li">August 15, 2020</li>
