translated comment system to English

--- a/blogs/Phuket.html
+++ b/blogs/Phuket.html
@@ -355,7 +355,7 @@
 
         <section class="comment-section center">
             <div class="comment-section-inner inner">
-                <h4 class="comment-section-h4">Comments</h4>
+                <h4 class="comment-section-h4">Комментарии</h4>
                 <!-- <h1 style="position: absolute; left: 50%; top: 50%; transform: translate(-50%,-50%);">No Comments Yet</h1> -->
                 <!-- <div class="comment-container">
                     <div class="comment-container-upper">
@@ -398,7 +398,7 @@
                <form class="comment-form">
                    <div class="comment-row">
                        <div class="comment-input-container">
-                            <label for="Name" class="comment-label">Name</label>
+                            <label for="Name" class="comment-label">Ваше имя или Ник</label>
                             <input required type="text" class="comment-input comment-input-name">
                        </div>
 
@@ -409,10 +409,10 @@
                    </div>
                    
 
-                   <label for="comment" class="comment-label">Post a comment</label>
+                   <label for="comment" class="comment-label">Оставить комментарий</label>
                    <textarea required name="comment" id="comment-input-form" cols="30" rows="5"></textarea>
                    <div class="comment-btn-container">
-                       <button onclick="submitComment(event)" type="submit" class="comment-btn">Submit</button>
+                       <button onclick="submitComment(event)" type="submit" class="comment-btn">Отправить</button>
                    </div>
                </form>
             </div>
