--- a/blogs/Thailand.html
+++ b/blogs/Thailand.html
@@ -365,7 +365,7 @@
 <!-- COMMENT SECTION ============================================================================== -->
         <section class="comment-section center">
             <div class="comment-section-inner inner">
-                <h4 class="comment-section-h4">Comments</h4>
+                <h4 class="comment-section-h4">Комментарии</h4>
             </div>
         </section>
 
@@ -374,7 +374,7 @@
                <form class="comment-form">
                    <div class="comment-row">
                        <div class="comment-input-container">
-                            <label for="Name" class="comment-label">Name</label>
+                            <label for="Name" class="comment-label">Ваше имя или Ник</label>
                             <input required type="text" class="comment-input comment-input-name">
                        </div>
 
@@ -385,10 +385,10 @@
                    </div>
                    
 
-                   <label for="comment" class="comment-label">Post a comment</label>
+                   <label for="comment" class="comment-label">Оставить комментарий</label>
                    <textarea required name="comment" id="comment-input-form" cols="30" rows="5"></textarea>
                    <div class="comment-btn-container">
-                       <button onclick="submitComment(event)" type="submit" class="comment-btn">Submit</button>
+                       <button onclick="submitComment(event)" type="submit" class="comment-btn">Отправить</button>
                    </div>
                </form>
             </div>
