--- a/blogs/Bali.html
+++ b/blogs/Bali.html
@@ -489,7 +489,7 @@
 
     <section class="comment-section center">
       <div class="comment-section-inner inner">
-        <h4 class="comment-section-h4">Comments</h4>
+        <h4 class="comment-section-h4">Комментарии</h4>
         <h1
           style="
             position: absolute;
@@ -509,7 +509,7 @@
         <form class="comment-form">
           <div class="comment-row">
             <div class="comment-input-container">
-              <label for="Name" class="comment-label">Name</label>
+              <label for="Name" class="comment-label">Ваше имя или Ник</label>
               <input
                 required
                 type="text"
@@ -527,7 +527,7 @@
             </div>
           </div>
 
-          <label for="comment" class="comment-label">Post a comment</label>
+          <label for="comment" class="comment-label">Оставить комментарий</label>
           <textarea
             required
             name="comment"
@@ -541,7 +541,7 @@
               type="submit"
               class="comment-btn"
             >
-              Submit
+            Отправить 
             </button>
           </div>
         </form>
