minor spacing issues fix

--- a/blogs/Bali.html
+++ b/blogs/Bali.html
@@ -487,9 +487,12 @@
     
  <!-- COMMENT SECTION  ======================================================================================================-->
 
-    <section class="comment-section center">
-      <div class="comment-section-inner inner">
+    <section class="comment-section center" >
+      <div class="inner">
         <h4 class="comment-section-h4">Комментарии</h4>
+      </div>
+      <div class="comment-section-inner inner">
+        
         <h1
           style="
             position: absolute;
