--- a/blogs/Thailand.html
+++ b/blogs/Thailand.html
@@ -364,8 +364,11 @@
         
 <!-- COMMENT SECTION ============================================================================== -->
         <section class="comment-section center">
-            <div class="comment-section-inner inner">
+            <div class="inner">
                 <h4 class="comment-section-h4">Комментарии</h4>
+              </div>
+            <div class="comment-section-inner inner">
+                <!-- <h4 class="comment-section-h4">Комментарии</h4> -->
             </div>
         </section>
 
