--- a/blogs/Bangkok.html
+++ b/blogs/Bangkok.html
@@ -405,8 +405,11 @@
  <!-- COMMENT SECTION =======================================================================================================================================-->
 
     <section class="comment-section center">
-        <div class="comment-section-inner inner">
+        <div class="inner">
             <h4 class="comment-section-h4">Комментарии</h4>
+          </div>
+        <div class="comment-section-inner inner">
+            
         </div>
     </section>
   
