--- a/blogs/Phuket.html
+++ b/blogs/Phuket.html
@@ -354,8 +354,11 @@
 <!-- COMMENT SECTION =======================================================================================================================================-->
 
         <section class="comment-section center">
-            <div class="comment-section-inner inner">
+            <div class="inner">
                 <h4 class="comment-section-h4">Комментарии</h4>
+              </div>
+            <div class="comment-section-inner inner">
+                
                 <!-- <h1 style="position: absolute; left: 50%; top: 50%; transform: translate(-50%,-50%);">No Comments Yet</h1> -->
                 <!-- <div class="comment-container">
                     <div class="comment-container-upper">
