--- a/blogs.html
+++ b/blogs.html
@@ -260,7 +260,7 @@
         </div>
     </section>
     <footer class="center footer">
-        <div class="inner footer-inner">
+        <div class="footer-inner">
           <div class="footer-col-1">
             <h2 class="footer-h2">Обзоры популярных направлений</h2>
             
