--- a/blogs.html
+++ b/blogs.html
@@ -158,7 +158,7 @@
                 <a href="./blogs/Bangkok" class="spacer-vertical-1rem">
                     <div class="blog-preview-container">
                         <div class="blog-title-container">
-                            <h2 class="h2">Поездка в столицу Таиланда – Бангкок.</h2>
+                            <h2 class="h2">Столица Таиланда Бангкок</h2>
                         </div>
                             <ul class="section-1-ul">
                                 <li class="section-1-li">August 6, 2020</li>
@@ -183,7 +183,8 @@
                 <a href="./blogs/Phuket" class="spacer-vertical-1rem">
                     <div class="blog-preview-container">
                         <div class="blog-title-container">
-                            <h2 class="h2">Отдых на острове Пхукет о А до Я.</h2>
+                            <h2 class="h2">Таиланд Пхукет</h2>
+                            
                         </div>
                             <ul class="section-1-ul">
                                 <li class="section-1-li">August 4, 2020</li>
@@ -208,7 +209,7 @@
                 <a href="./blogs/Thailand" class="spacer-vertical-1rem">
                     <div class="blog-preview-container">
                         <div class="blog-title-container">
-                            <h2 class="h2">Краткий обзор вариантов отдыха в Таиланде</h2>
+                            <h2 class="h2">Тайланд отдых</h2>
                         </div>
                             <ul class="section-1-ul">
                                 <li class="section-1-li">July 28, 2020</li>
