--- a/blogs/Bali.html
+++ b/blogs/Bali.html
@@ -649,7 +649,7 @@
     </footer>
 
 <!-- END OF FOOTER - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->
-    <script src="../scripts/blogs/Bangkok.js"></script>
+    <script src="../scripts/blogs/Bali.js"></script>
     <script>
       const burgerBtn = document.querySelector(".burger-menu");
       const phoneMenu = document.querySelector(".phone-menu");
