changes to index and links at the end of the blogs

--- a/blogs/Bali.html
+++ b/blogs/Bali.html
@@ -477,11 +477,11 @@
           <br />
         </p>
 
-        <a href="./Phuket" class="text-link">- Столица Таиланда Бангкок</a>
+        <a href="./Phuket" class="text-link-h2">Столица Таиланда Бангкок</a>
         <br />
-        <a href="./Bangkok" class="text-link">- Таиланд остров Пхукет</a>
+        <a href="./Bangkok" class="text-link-h2">Таиланд остров Пхукет</a>
         <br />
-        <a href="./Thailand" class="text-link">- Отдых в Таиланде</a>
+        <a href="./Thailand" class="text-link-h2">Отдых в Таиланде</a>
       </div>
     </section>
     
