--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 Сервис поиска билетов Y-Flights — это крупнейший поисковик
                 авиабилетов в России, СНГ и во всем мире. Сервис производит
                 сравнение всех вариантов, согласно вашему запросу и перенаправляет
-                вас на сайты авиакомпаний или турагенств.<br /><br />
+                вас на сайты авиакомпаний или турагенств.<br /><br /><br>
                 Цены на билеты и отели, которые вы получите в результате поиска
                 являются финальными, без каких либо скрытых комиссий и платежей.
               </p>
