--- a/blogs/phuketBeach.html
+++ b/blogs/phuketBeach.html
@@ -142,6 +142,13 @@
         </ul>
 
            <!--The div element for the map -->
+           <style>
+            #map {
+              width: 100%;
+              height: 400px;
+              background-color: grey;
+            }
+           </style>
     <div id="map"></div>
     <script defer>
 // Initialize and add the map
