--- a/blogs/phuketBeach.html
+++ b/blogs/phuketBeach.html
@@ -14,13 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
-    integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-    crossorigin=""/>
-    
-    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
-   integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
-   crossorigin=""></script>
+
    
     <link rel="icon" href="../favicon.ico" type="image/x-icon" />
     <title>
@@ -149,7 +143,7 @@
           <li class="section-1-li">Боря Ф</li>
         </ul>
         
-        <style>
+        <!-- <style>
             #mapid{
                 height: 380px
             }
@@ -164,10 +158,11 @@
     id: 'mapbox/streets-v11',
     tileSize: 512,
     zoomOffset: -1,
-    accessToken: 'your.mapbox.access.token'
+    accessToken: 'pk.eyJ1IjoiYWluZGVyZXciLCJhIjoiY2tibnI5enJiMXNyYjJ1cGZrNjJ2bHg0biJ9.8hSnqy30sZhinbswdemmNg'
 }).addTo(mymap);
-        </script>
-
+        </script> -->
+        <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d31615.378321063483!2d98.2969331!3d7.9031874!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30503a96a80e1833%3A0x40223bc2c382480!2sPa%20Tong%2C%20Kathu%20District%2C%20Phuket%2C%20Thailand!5e0!3m2!1sen!2sph!4v1597799777547!5m2!1sen!2sph" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="true" aria-hidden="false" tabindex="0"></iframe> -->
+        <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d7905.442195581897!2d98.2915019!3d7.8193175!3m2!1i1024!2i768!4f13.1!3m2!1m1!2z0JrQsNGC0LA!5e0!3m2!1sen!2sph!4v1597800095779!5m2!1sen!2sph" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe> -->
         <!-- <div class="section-1-cont-3-col">
                     <div class="section-1-img-small-wrapper">
                         <img src="../assets/articles/phuketBeach/1.jpg" alt="" class="section-1-img-small">
@@ -180,11 +175,12 @@
                     </div>
          </div> -->
 
-        <div class="section-1-img-wrapper">
+        <div style="height: 600px; " class="section-1-img-wrapper">
           <img
+          style="object-fit: contain; height: 100%; "
             src="../assets/articles/phuketBeach/img1.jpg"
             alt="Пхукет туры"
-            class="section-1-img"
+            class="section-1-img-special-map"
           />
         </div>
 
