--- a/blogs/phuketBeach.html
+++ b/blogs/phuketBeach.html
@@ -721,8 +721,8 @@
     </footer>
 
     <!-- END OF FOOTER - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->
-    <script src="../scripts/blogs/Bali.js"></script>
-    <!-- <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script> -->
+    <script src="../scripts/blogs/PhuketBeach.js"></script>
+
 
     <script>
       const burgerBtn = document.querySelector(".burger-menu");
