--- a/tours.html
+++ b/tours.html
@@ -257,7 +257,7 @@
               />
               <div class="section-6-text-container">
                 <h3 class="section-6-h3">Пляжи Пхукета</h3>
-                <a href="./blogs/Phuket" class="section-6-a">Читать далее</a>
+                <a href="./blogs/phuket-beach" class="section-6-a">Читать далее</a>
               </div>
             </div>
              <!--END OF BLOG -->
