--- a/blogs.html
+++ b/blogs.html
@@ -129,6 +129,31 @@
     <section class="center section-1">
         <div class="inner col-2">
             
+                 <!-- PHUKET-BEACH BLOG PREVIEW -->
+                 <a href="./blogs/Bali" class="spacer-vertical-1rem">
+                    <div class="blog-preview-container">
+                        <div class="blog-title-container">
+                            <h2 class="h2">Отдых на Бали</h2>
+                        </div>
+                            <ul class="section-1-ul">
+                                <li class="section-1-li">August 18, 2020</li>
+                                <span>•</span>
+                                <li class="section-1-li">Автор</li>
+                                <span>•</span>
+                                <li class="section-1-li">Боря Ф</li>
+                            </ul>
+                            <div class="img-wrapper-large">
+                                <img src="./assets/Blog-page/blog display/phuket-beach-blog.jpg" alt="Таиланд Путевка" class="img img-large">
+                            </div>
+                            <div class="justify-wrapper">
+                                <p class="p">
+                                    Отдых в Индонезии можно организовать и по путевке и
+                                    самостоятельно. Он начинается с авиаперелета на Бали.
+                            </div> 
+                    </div>
+                </a>
+                 <!-- END OF PHUKET-BEACH BLOG PREVIEW -->
+            
                   <!-- BALI BLOG PREVIEW -->
                   <a href="./blogs/Bali" class="spacer-vertical-1rem">
                     <div class="blog-preview-container">
