--- a/blogs.html
+++ b/blogs.html
@@ -130,7 +130,7 @@
         <div class="inner col-2">
             
                  <!-- PHUKET-BEACH BLOG PREVIEW -->
-                 <a href="./blogs/Bali" class="spacer-vertical-1rem">
+                 <a href="./blogs/phuket-beach" class="spacer-vertical-1rem">
                     <div class="blog-preview-container">
                         <div class="blog-title-container">
                             <h2 class="h2">Отдых на Бали</h2>
