--- a/blogs/phuket-beach.html
+++ b/blogs/phuket-beach.html
@@ -655,7 +655,7 @@
     <!-- END OF COMMENTS SECTION - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->
 
     <footer class="center footer">
-      <div class="inner footer-inner">
+      <div class="footer-inner">
         <div class="footer-col-1">
           <h2 class="footer-h2">Обзоры популярных направлений</h2>
 
