--- a/blogs/phuket-beach.html
+++ b/blogs/phuket-beach.html
@@ -461,7 +461,7 @@
           Пляж Мерлин
         </h2>
 
-        <p class="section-1-h2">
+        <p class="section-1-p">
           Маленький, красивый и уютный пляж, который расположен к северо-западу
           от предыдущего на заповедной территории. Поблизости есть рестораны, 5*
           отель сети Marriott и спасатели. Его можно использовать для дайвинга.
@@ -471,7 +471,7 @@
         </p>
 
         <h2 class="section-1-h2">
-          Пляж Парадайз H2
+          Пляж Парадайз 
         </h2>
 
         <p class="section-1-p">
