--- a/blogs/phuket-beach.html
+++ b/blogs/phuket-beach.html
@@ -587,7 +587,7 @@
         <br />
         <br />
 
-        <a href="./Bali" class="text-link-h2">тдых на Бали</a>
+        <a href="./Bali" class="text-link-h2">Отдых на Бали</a>
         <br />
         <a href="./Bangkok" class="text-link-h2">Столица Таиланда Бангкок</a>
         <br />
