--- a/sitemap.html
+++ b/sitemap.html
@@ -130,7 +130,7 @@
                 </li>
                 
                 <li class="section-1-li">
-                    <a href="./blogs/phuket-beach.html" class="link-text">
+                    <a href="./blogs/phuket-beach" class="link-text">
                         Пляжи Пхукета
                     </a>
                 </li>
