--- a/blogs.html
+++ b/blogs.html
@@ -168,7 +168,7 @@
                                 <li class="section-1-li">Боря Ф</li>
                             </ul>
                             <div class="img-wrapper-large">
-                                <img src="./assets/Blog-page/blog display/bali-blog.jpg" alt="Бангкок" class="img img-large">
+                                <img src="./assets/Blog-page/blog display/bali-blog.jpg" alt="Отдых на Бали" class="img img-large">
                             </div>
                             <div class="justify-wrapper">
                                 <p class="p">
