--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
              <!--END OF BLOG -->
              
              
-                <!-- BLOG -->
+            <!--BALI BLOG -->
             <div class="section-6-item-container">
               <img
                 loading="lazy"
