--- a/tours.html
+++ b/tours.html
@@ -242,7 +242,7 @@
         
       <section class="center section-6">
         <div class="inner">
-          <h2 class="section-6-h2">Тайланд отдых - найти отели, авиабилеты и место для отдыха</h2>
+          <h2 class="section-6-h2">Интересные места для отдыха</h2>
        
   
           <div class="section-6-item-wrapper">
