--- a/blogs.html
+++ b/blogs.html
@@ -129,6 +129,30 @@
     <section class="center section-1">
         <div class="inner col-2">
             
+                  <!-- VIETNAM BLOG PREVIEW -->
+                  <a href="./blogs/Vietnam" class="spacer-vertical-1rem">
+                    <div class="blog-preview-container">
+                        <div class="blog-title-container">
+                            <h2 class="h2">Вьетнам для туристов. Краткий обзор.</h2>
+                        </div>
+                            <ul class="section-1-ul">
+                                <li class="section-1-li">August 25, 2020</li>
+                                <span>•</span>
+                                <li class="section-1-li">Автор</li>
+                                <span>•</span>
+                                <li class="section-1-li">Боря Ф</li>
+                            </ul>
+                            <div class="img-wrapper-large">
+                                <img src="./assets/Blog-page/blog display/vietnam-blog.jpg" alt="Отдых во Вьетнаме" class="img img-large">
+                            </div>
+                            <div class="justify-wrapper">
+                                <p class="p">
+                                    Краткий обзор об отдыхе во Вьетнаме.
+                            </div> 
+                    </div>
+                </a>
+                 <!-- END OF VIETNAM BLOG PREVIEW -->
+            
                  <!-- PHUKET-BEACH BLOG PREVIEW -->
                  <a href="./blogs/phuket-beach" class="spacer-vertical-1rem">
                     <div class="blog-preview-container">
