--- a/index.html
+++ b/index.html
@@ -309,6 +309,22 @@
   
           <div class="section-6-item-wrapper">
             
+              <!-- BLOG -->
+               <div class="section-6-item-container">
+                <img
+                  loading="lazy"
+                  src="./assets/images/small/vietnam-small.jpg"
+                  alt="Отдых во Вьетнаме"
+                  class="section-6-img"
+                />
+                <div class="section-6-text-container">
+                  <h3 class="section-6-h3">Вьетнам</h3>
+                  <a href="./blogs/Vietnam" class="section-6-a">Читать далее</a>
+                  <!-- <a href="" class="section-6-a">- Блог</a> -->
+                </div>
+              </div>
+             <!--END OF BLOG -->
+            
              <!-- BLOG -->
             <div class="section-6-item-container">
               <img
