added vietnam to sitemaps

--- a/sitemap.html
+++ b/sitemap.html
@@ -136,6 +136,12 @@
                 </li>
                 
                 <li class="section-1-li">
+                    <a href="./blogs/Vietnam" class="link-text">
+                        Вьетнам для туристов. Краткий обзор.
+                    </a>
+                </li>
+                
+                <li class="section-1-li">
                     <a href="./sitemap.html" class="link-text">
                         Карта сайта
                     </a>
