added sri-lanka article

--- a/sitemap.html
+++ b/sitemap.html
@@ -142,6 +142,12 @@
                 </li>
                 
                 <li class="section-1-li">
+                    <a href="./blogs/srilanka" class="link-text">
+                        Остров Шри Ланка.
+                    </a>
+                </li>
+                
+                <li class="section-1-li">
                     <a href="./sitemap.html" class="link-text">
                         Карта сайта
                     </a>
