changed sri-lanka blog script file

--- a/blogs/srilanka.html
+++ b/blogs/srilanka.html
@@ -658,7 +658,7 @@
     </footer>
 
     <!-- END OF FOOTER - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->
-    <script src="../scripts/blogs/Bali.js"></script>
+    <script src="../scripts/blogs/Srilanka.js"></script>
     <script>
       const burgerBtn = document.querySelector(".burger-menu");
       const phoneMenu = document.querySelector(".phone-menu");
