--- a/tours.html
+++ b/tours.html
@@ -257,7 +257,7 @@
               />
               <div class="section-6-text-container">
                 <h3 class="section-6-h3">Шри Ланка</h3>
-                <a href="./blogs/Vietnam" class="section-6-a">Читать далее</a>
+                <a href="./blogs/srilanka" class="section-6-a">Читать далее</a>
                 <!-- <a href="" class="section-6-a">- Блог</a> -->
               </div>
             </div>
