changed link from blog main page

--- a/blogs.html
+++ b/blogs.html
@@ -133,7 +133,7 @@
       <div class="inner col-2">
           
         <!-- SRI-LANKA BLOG PREVIEW -->
-        <a href="./blogs/Vietnam" class="spacer-vertical-1rem">
+        <a href="./blogs/srilanka" class="spacer-vertical-1rem">
           <div class="blog-preview-container">
             <div class="blog-title-container">
               <h2 class="h2">Остров Шри Ланка.</h2>
