changed link from blog main page

--- a/blogs/srilanka.html
+++ b/blogs/srilanka.html
@@ -484,10 +484,10 @@
           авиабилеты не сложно, так же как и найти отель.
         </p>
 
-        <h2 class="section-1-h2">
+        <p class="section-1-1">
           Если планируете поездку в экзотические страны, то рекомендуем
           ознакомиться с нашими статьями:
-        </h2>
+        </p>
        
 
         <a href="./Vietnam" class="text-link-h2">Отдых во Вьетнаме</a>
