changed link from blog main page

--- a/blogs/srilanka.html
+++ b/blogs/srilanka.html
@@ -152,7 +152,7 @@
 
         <h2 class="section-1-h2">Шри-Ланка. Благословенный остров</h2>
 
-        <p class="section-1-p">
+        <p class="justify-wrapper section-1-p">
           Южнее Индии, на экваторе, находится благословенная земля. Именно так с
           языка здешнего коренного народа сингалов переводится название этого
           удивительного острова. Побывавшие там, соглашаются единогласно. А
@@ -171,7 +171,7 @@
           />
         </div>
 
-        <p class="section-1-p justify-wrapper">
+        <p class="justify-wrapper section-1-p justify-wrapper">
           Несмотря на то, что Шри-Ланка – крохотная «капля» в Индийском океане
           (как по размеру, так и по форме острова), концентрация
           достопримечательностей и просто занимательных локаций здесь на добрый
@@ -210,7 +210,7 @@
           />
         </div>
 
-        <p class="section-1-p justify-wrapper">
+        <p class="justify-wrapper section-1-p justify-wrapper">
           Экватор обеспечивает Цейлону (как называли Шри колонизаторы-англичане,
           когда-то хозяйничавшие на острове) много солнца и стабильные около
           плюс 30 днем и 25 ночью круглый год.
@@ -237,7 +237,7 @@
           />
         </div>
 
-        <p class="section-1-p justify-wrapper">
+        <p class="justify-wrapper section-1-p justify-wrapper">
           На Шри-Ланку можно попасть только самолётом. Когда-то давно
           существовал перешеек, связывавший её с Южной Индией, но сейчас его
           поглотил океан, оставив множество крохотных островков. Правда,
@@ -283,7 +283,7 @@
           />
         </div>
 
-        <p class="section-1-p justify-wrapper">
+        <p class="justify-wrapper section-1-p justify-wrapper">
           Виза в Шри-Ланку на 30 дней получается очень просто. Заранее, заполнив
           анкету онлайн на сайте местного департамента иммиграции (за 35
           долларов США). Или по прилёту в аэропорту (за 40). Если захочется
@@ -310,7 +310,7 @@
           />
         </div>
 
-        <p class="section-1-p">
+        <p class="justify-wrapper section-1-p">
           Да, поезда старенькие, порой переполнены туристами и местными, ходят с
           опозданием и медленно. Но это всё покажется пустяковой мелочью, когда
           Ваш взор будет прикован к стенам банановых зарослей и колоннам
@@ -340,7 +340,7 @@
           />
         </div>
 
-        <p class="section-1-p">
+        <p class="justify-wrapper section-1-p">
           Только не забывайте, что движение на острове левостороннее и будьте
           внимательны на оживлённых перекрестках. Как и везде в Азии, в дорожном
           движении присутствует доля хаоса – кто громче всех сигналит, тот
@@ -374,7 +374,7 @@
           />
         </div>
 
-        <p class="section-1-p">
+        <p class="justify-wrapper section-1-p">
           На острове причудливо переплелись обычаи многих народов.
           <br />
           <br />
@@ -399,7 +399,7 @@
           />
         </div>
 
-        <p class="section-1-p">
+        <p class="justify-wrapper section-1-p">
           Одновременно люди дружелюбные чрезвычайно, белозубо улыбчивые,
           приветливые. И уважительно относящиеся к «суду» - белым. Даже если в
           Вас будут «тыкать» пальцем, показывая диковинного светлокожего
@@ -423,7 +423,7 @@
           />
         </div>
 
-        <p class="section-1-p">
+        <p class="justify-wrapper section-1-p">
           Обязательно попробуйте местную кухню – рисовые лепёшки с кокосовой
           мякотью роти; кёд – йогурт из буйволиного молока в глиняном горшочке;
           кирибат – рис с кокосовым сахаром джагери, сваренный в кокосовом
@@ -454,7 +454,7 @@
           />
         </div>
 
-        <p class="section-1-p">
+        <p class="justify-wrapper section-1-p">
           Отдых на Шри-Ланке удовлетворит самые взыскательные запросы.
           <br />
           <br />
