changed link from blog main page

--- a/blogs/srilanka.html
+++ b/blogs/srilanka.html
@@ -482,11 +482,13 @@
           <br />
           Стоит отметить, что дорога до острова не будет быстрой. Купить
           авиабилеты не сложно, так же как и найти отель.
+          <br><br>
         </p>
 
-        <p class="section-1-1">
+        <p class="section-1-p">
           Если планируете поездку в экзотические страны, то рекомендуем
           ознакомиться с нашими статьями:
+          <br><br>
         </p>
        
 
