changed directory of _redirects

--- a/blogs/Bangkok.html
+++ b/blogs/Bangkok.html
@@ -506,7 +506,15 @@
                         </li>
                     </ul>
                   </div>
-                  <a href="../sitemap" class="link-h5">Карта сайта</a>
+                  <a href="./Phuket" class="link-h2">Отдых на Пхукете</a>
+                  <br>
+                  <a href="./Thailand" class="link-h2">Отдых в Тайланде</a>
+                  <br>
+                  <a href="./phuket-beach.html" class="link-h2">Пляжи Пхукета</a>
+
+
+
+
               
               </div>
               <div class="footer-col-3"></div>
